improved dark mode, updated options page, improved song matching, and multipl bug fixes

--- a/ui/panel.css
+++ b/ui/panel.css
@@ -141,6 +141,7 @@
 	color: #fff;		  
 	text-decoration: none;
 	transition: background-color .3s;
+	text-align: center;
 }
 #show_hide_lyrics:hover {
 	background-color: #ee792c;
